# SPeeDy

./: CMakeLists.txt  README.md  id_rsa_git  id_rsa_git.pub  setupCMakeNinja.sh
cmake/: FindROOT.cmake
contrib/Python/: .buildinfo_Python.txt  .env  .filelist  .post-install.sh  Python-env.sh  version.txt
contrib/Python/include/python3.9/: pyconfig.h
contrib/Python/lib/pkgconfig/: python-3.9-embed.pc  python-3.9.pc
contrib/Python/lib/python3.9/: _sysconfigdata__linux_x86_64-linux-gnu.py
contrib/Python/lib/python3.9/config-3.9-x86_64-linux-gnu/: Makefile  config.c  python-config.py
contrib/Python/logs/: Python-3.9.6-build.cmake  Python-3.9.6-configure.cmake  Python-3.9.6-install-impl.cmake  Python-3.9.6-install.cmake  download-Python-3.9.6.cmake  extract-Python-3.9.6.cmake  verify-Python-3.9.6.cmake
contrib/Python/man/man1/: root.1
contrib/Python/tutorials/: hsimple.root
